--- a/UI/Fragariyo_GUI.ui
+++ b/UI/Fragariyo_GUI.ui
@@ -95,7 +95,7 @@
         </containerlayout>
         <child>
           <object class="ttk.Frame" id="Import_frame">
-            <property name="height">144</property>
+            <property name="height">300</property>
             <property name="relief">ridge</property>
             <property name="width">285</property>
             <layout manager="grid">
@@ -134,7 +134,7 @@
                   <property name="pady">5</property>
                   <property name="row">1</property>
                 </layout>
-                <containerlayout manager="grid">
+                <containerlayout manager="pack">
                   <property name="propagate">False</property>
                 </containerlayout>
               </object>
@@ -152,9 +152,59 @@
                   <property name="pady">0</property>
                   <property name="row">2</property>
                 </layout>
-                <containerlayout manager="grid">
+                <containerlayout manager="pack">
                   <property name="propagate">False</property>
                 </containerlayout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Button" id="peakpick_deiso_fromcsv" named="True">
+                <property name="command" type="command" cbtype="simple">on_button_peakpickdeiso_fromraw_clicked</property>
+                <property name="state">normal</property>
+                <property name="text" translatable="yes">Peak List Creation from csv Raw</property>
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="ipadx">38</property>
+                  <property name="padx">0</property>
+                  <property name="pady">5</property>
+                  <property name="row">8</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Entry" id="numberofsectionsvalue_entry" named="True">
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="row">4</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Entry" id="timesabovenoise_entry" named="True">
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="row">6</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="label5">
+                <property name="text" translatable="yes">Noise sections in spectrum</property>
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="pady">3</property>
+                  <property name="row">3</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="label6">
+                <property name="text" translatable="yes">Signal must be x times above noise </property>
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="pady">3</property>
+                  <property name="row">5</property>
+                </layout>
               </object>
             </child>
           </object>
@@ -198,7 +248,7 @@
                   <property name="pady">5</property>
                   <property name="row">3</property>
                 </layout>
-                <containerlayout manager="grid">
+                <containerlayout manager="pack">
                   <property name="propagate">False</property>
                 </containerlayout>
               </object>
@@ -230,33 +280,6 @@
             </child>
           </object>
         </child>
-        <child>
-          <object class="ttk.Frame" id="frame4">
-            <property name="height">144</property>
-            <property name="relief">ridge</property>
-            <property name="width">285</property>
-            <layout manager="grid">
-              <property name="column">0</property>
-              <property name="padx">8</property>
-              <property name="pady">5</property>
-              <property name="row">2</property>
-            </layout>
-            <containerlayout manager="grid">
-              <property name="propagate">False</property>
-            </containerlayout>
-            <child>
-              <object class="ttk.Label" id="label5">
-                <property name="image">Capture2.PNG</property>
-                <property name="text" translatable="yes">FargariyoLogo (here)</property>
-                <layout manager="grid">
-                  <property name="column">0</property>
-                  <property name="padx">40</property>
-                  <property name="row">3</property>
-                </layout>
-              </object>
-            </child>
-          </object>
-        </child>
       </object>
     </child>
     <child>
@@ -273,7 +296,7 @@
         </containerlayout>
         <child>
           <object class="ttk.Frame" id="Parameters_frame">
-            <property name="height">400</property>
+            <property name="height">200</property>
             <property name="relief">ridge</property>
             <property name="width">210</property>
             <layout manager="grid">
@@ -355,6 +378,38 @@ Fragmentation</property>
                     </child>
                   </object>
                 </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Frame" id="frame1">
+            <property name="height">144</property>
+            <property name="relief">ridge</property>
+            <property name="width">200</property>
+            <layout manager="grid">
+              <property name="column">1</property>
+              <property name="padx">8</property>
+              <property name="pady">20</property>
+              <property name="row">2</property>
+            </layout>
+            <containerlayout manager="grid">
+              <property name="propagate">False</property>
+            </containerlayout>
+            <child>
+              <object class="ttk.Label" id="label4">
+                <property name="compound">top</property>
+                <property name="cursor">arrow</property>
+                <property name="image">Capture2.PNG</property>
+                <property name="justify">left</property>
+                <property name="state">normal</property>
+                <property name="text" translatable="yes">FargariyoLogo (here)</property>
+                <layout manager="grid">
+                  <property name="column">0</property>
+                  <property name="padx">10</property>
+                  <property name="pady">10</property>
+                  <property name="row">3</property>
+                </layout>
               </object>
             </child>
           </object>
